# InverseKinematics-simulator

./: .gitignore  CMakeLists.txt  README.md  program.cpp  window.cpp  window.h
include/arm/: arm.h
include/math/: constants.h
include/math/kinematics/: inverseKinematics.h
include/math/vector/: vector2d.h
include/window/: window.h
src/: program.cpp
src/arm/: arm.cpp
src/math/kinematics/: inverseKinematics.cpp
src/math/vector/: vector2d.cpp
src/window/: window.cpp
